# syft.bzl

./: .gitattributes  .pre-commit-config.yaml  BUILD  LICENSE  MODULE.bazel  README.md  defs.bzl  extensions.bzl  go.mod  go.sum  multitool.lock.json  syft.bzl  toolchain.bzl  versions.bzl
examples/aspect/: .bazelrc  BUILD  MODULE.bazel  README.md
examples/basic/: BUILD  MODULE.bazel  README.md
examples/compiled_syft/: .envrc  BUILD  MODULE.bazel  README.md  go.mod  go.sum
examples/compiled_syft/patches/: BUILD  syft.patch
examples/compiled_syft/tools/: BUILD
examples/rules_img/: .bazelrc  BUILD  MODULE.bazel  README.md
examples/rules_oci/: .bazelrc  BUILD  MODULE.bazel  README.md
syft/: BUILD  defs.bzl  extensions.bzl
syft/toolchain/: BUILD
test/: BUILD
tools/: BUILD
